#file: noinspection YAMLSchemaValidation
appId: com.vitalyiegorov.suuudokuuu
name: Gameplay
env:
  # TODO: Load app with specific puzzle
  PUZZLE: 123
---

- runFlow: ./templates/start-game.template.yaml
# Check cell selection and deselection
- assertNotVisible:
    id: "CellSelectors.Active"
- tapOn:
    id: "CellSelectors.Root"
    index: 12
    retryTapIfNoChange: false
- assertVisible:
    id: "CellSelectors.Active"

# TODO: Can we assert highlighted cells count?
- assertVisible:
    id: "CellSelectors.Highlighted"

- tapOn:
    id: "CellSelectors.Active"
    retryTapIfNoChange: false
- assertNotVisible:
    id: "CellSelectors.Active"


