appId: ${APP_ID}
---
#- startRecording:
#    path: '02.game-screen-loose'
#    optional: true

- openLink:
    link: suuudokuuu://shared?eyJwYXVzZWQiOnRydWUsImVsYXBzZWRUaW1lIjo3NSwic3Vkb2t1U3RyaW5nIjoiODYzMi40NzUxNDI5MTU3NjgzNzUxMzYuMjQuNi41NzI5MTMuOTM3NDgxNTYyMjEuNTM2LjcuNTcyODEzNDk2MTk4NjQ1MzI3MzQ2OTcyODE1IiwibWlzdGFrZXMiOjAsInNjb3JlIjo0MjA0MCwibWF4TWlzdGFrZXMiOjN9
- runFlow:
    when:
      visible: 'Open in "suuudokuuu (Preview)"'
    commands:
      - tapOn: 'Open'

- extendedWaitUntil:
    visible: 'Open shared puzzle?'
    timeout: 10000
- tapOn: 'Open puzzle'
- assertVisible:
    id: 'GameScreenSelectors.Score'
    text: '42040'
- assertVisible:
    below: 'Mistakes'
    text: '0/3'
- assertVisible:
    id: 'CellSelectors.Root'
- assertVisible:
    id: 'AvailableValueItemSelectors.Button'
- tapOn:
    id: 'CellSelectors.Root'
    index: 28
- tapOn:
    id: 'AvailableValueItemSelectors.Button'
    index: 0
- assertVisible:
    below: 'Mistakes'
    text: '1/3'
- tapOn:
    id: 'AvailableValueItemSelectors.Button'
    index: 0
- assertVisible:
    below: 'Mistakes'
    text: '2/3'
- tapOn:
    id: 'AvailableValueItemSelectors.Button'
    index: 0
- assertVisible: 'Better luck next time!.*'
- assertVisible: 'Help Ukraine win!'
- tapOn: 'Play again'
- assertVisible:
    id: 'HomeScreenSelectors.BestScore'
    text: '[0-9]+'
- assertVisible:
    below: 'Best time'
    text: '[0-9]{2}:[0-9]{2}'
- tapOn: 'Start new'
- assertVisible: 'Newbie'
