appId: ${APP_ID}
---
#- startRecording:
#    path: '03.game-screen-win'
#    optional: true

- openLink:
    link: suuudokuuu://shared?eyJwYXVzZWQiOnRydWUsImVsYXBzZWRUaW1lIjo5Niwic3Vkb2t1U3RyaW5nIjoiNTE4NzkyNDM2MzI0ODYxNTc5OTc2NDM1MjgxNjU3MTI5ODQzODQyNjczMTk1MTkzNTg0NzYyLjMxOTQ4NjU3NDY1MzE3OTI4Nzg5MjU2MzE0IiwibWlzdGFrZXMiOjEsInNjb3JlIjoxMzQyMjYsIm1heE1pc3Rha2VzIjo5OX0=
- runFlow:
    when:
      visible: 'Open in "suuudokuuu (Preview)"'
    commands:
      - tapOn: 'Open'

- extendedWaitUntil:
    visible: 'Open shared puzzle?'
    timeout: 10000
- tapOn: 'Open puzzle'
- tapOn:
    id: 'CellSelectors.Root'
    index: 54
- tapOn:
    id: 'AvailableValueItemSelectors.Button'
    index: 0
- assertVisible: Winners-winner, .*
- assertVisible: You have scored.*
- assertVisible: Help Ukraine win!
- tapOn: 'Play again'
- assertVisible: 'Start new'
