appId: ${APP_ID}
---
- startRecording:
      path: '11.single-flight-start'
      optional: true

- runFlow: subflows/navigation/launch-home.flow.yaml
- scrollUntilVisible:
      element:
          id: 'HomeScreenSelectors.StartButton'
      direction: DOWN
      timeout: 3000
- scroll
- tapOn:
      id: 'HomeScreenSelectors.StartButton'
      repeat: 5
      delay: 50
- extendedWaitUntil:
      visible:
          id: 'GameScreenSelectors.Root'
      timeout: 15000
- runFlow: subflows/game/quit-current-game.flow.yaml
- stopApp
